fix galerie nav

--- a/galerie.html
+++ b/galerie.html
@@ -1,198 +1,205 @@
 <!DOCTYPE html>
 <html lang="fr">
+  <head>
+    <meta charset="UTF-8" />
+    <title>MLMB Art-Thérapie</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.3/dist/css/bulma-carousel.min.css"
+    />
+  </head>
 
-<head>
-	<meta charset="UTF-8" />
-	<title>MLMB Art-Thérapie</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<link rel="stylesheet" href="style.css" />
-	<link rel="preconnect" href="https://fonts.gstatic.com" />
-	<link href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300;400;500;600;700" rel="stylesheet" />
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css" />
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
-		integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-		crossorigin="anonymous" referrerpolicy="no-referrer" />
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.3/dist/css/bulma-carousel.min.css">
-</head>
+  <body>
+    <section class="mlp-section">
+      <div class="mt-4 mr-4">
+        <nav class="navbar is-transparent">
+          <div class="navbar-brand">
+            <div
+              class="navbar-burger"
+              data-target="navmenu"
+              aria-label="menu"
+              aria-expanded="false"
+            >
+              <span aria-hidden="true"></span>
+              <span aria-hidden="true"></span>
+              <span aria-hidden="true"></span>
+            </div>
+          </div>
 
-<body>
-	<section class="section">
-		<div class="mt-4 mr-4">
-			<nav class="navbar is-transparent">
-				<div class="navbar-brand">
-					<div class="navbar-burger" data-target="navmenu" aria-label="menu" aria-expanded="false">
-						<span aria-hidden="true"></span>
-						<span aria-hidden="true"></span>
-						<span aria-hidden="true"></span>
-					</div>
-				</div>
+          <div id="navmenu" class="navbar-menu">
+            <div class="navbar-start"></div>
+            <div class="navbar-end">
+              <a class="navbar-item mx-3" href="index.html">
+                <span class="icon">
+                  <i class="fas fa-home"></i>
+                </span>
+                Accueil
+              </a>
 
-				<div id="navmenu" class="navbar-menu">
-					<div class="navbar-start"></div>
-					<div class="navbar-end">
-						<a class="navbar-item mx-3" href="index.html">
-							<span class="icon">
-								<i class="fas fa-home"></i>
-							</span>
-							Accueil
-						</a>
+              <a href="./galerie.html" class="navbar-item mx-3">
+                <span class="icon">
+                  <i class="fa-solid fa-palette"></i>
+                </span>
+                Galerie
+              </a>
 
-						<a href="./galerie.html" class="navbar-item mx-3">
-							<span class="icon">
-								<i class="fa-solid fa-palette"></i>
-							</span>
-							Galerie
-						</a>
+              <a href="./coursStages.html" class="navbar-item mx-3">
+                <span class="icon">
+                  <i class="fa-solid fa-person-chalkboard"></i>
+                </span>
+                Les cours et stages de mosaiques</a
+              >
 
-						<a href="./coursStages.html" class="navbar-item mx-3">
-							<span class="icon">
-								<i class="fa-solid fa-person-chalkboard"></i>
-							</span>
-							Les cours et stages de mosaiques</a>
+              <a href="./art_therapie.html" class="navbar-item mx-3">
+                <span class="icon">
+                  <i class="fa-solid fa-hand-holding-hand"></i>
+                </span>
+                Art thérapie
+              </a>
 
-						<a href="./art_therapie.html" class="navbar-item mx-3">
-							<span class="icon">
-								<i class="fa-solid fa-hand-holding-hand"></i>
-							</span>
-							Art thérapie
-						</a>
+              <a href="#section3" class="navbar-item mx-3">
+                <span class="icon">
+                  <i class="fa-solid fa-envelope"></i>
+                </span>
+                &nbsp;Contact&nbsp;
+              </a>
+            </div>
+          </div>
+        </nav>
+        <canvas
+          class="Board-Canvas absolute-origin in-background"
+          id="canvas1"
+          style="display: none"
+        ></canvas>
+      </div>
+      <section class="container" style="width: 100vh; margin-top: 10vh" :>
+        <div class="block" style="padding-bottom: 5%">
+          <h2 class="is-3 subtitle">La Galerie</h2>
+        </div>
+        <div class="tile is-ancestor">
+          <!--Tile Wrapper-->
+          <div class="is-parent is-vertical">
+            <figure class="tile image-tile is-child">
+              <img src="Galerie/galerie1.jpg" class="image-galerie" alt="" />
+            </figure>
 
-						<a href="#section3" class="navbar-item mx-3">
-							<span class="icon">
-								<i class="fa-solid fa-envelope"></i>
-							</span>
-							&nbsp;Contact&nbsp;
-						</a>
-					</div>
-				</div>
-			</nav>
-			<canvas
-			class="Board-Canvas absolute-origin in-background"
-			id="canvas1"
-			style="display: none;"
-		></canvas>
-		</div>
+            <figure class="tile is-child">
+              <img src="Galerie/galerie2.jpg" class="image-galerie" alt="" />
+            </figure>
+            <figure class="tile is-child">
+              <img src="Galerie/galerie3.jpg" class="image-galerie" alt="" />
+            </figure>
+          </div>
 
-	</section>
-	<section class="container" style="width: 100vh":>
-		<div class="block" style="padding-bottom: 5%;">
-			<h2 class="is-3 subtitle">La Galerie</h2>
-		</div>
-		<div class="tile is-ancestor">
-			<!--Tile Wrapper-->
-				<div class="is-parent is-vertical">
-							<figure class="tile image-tile is-child">
-								<img src="Galerie/galerie1.jpg" class="image-galerie" alt="">
-							</figure>
+          <div class="is-parent">
+            <div class="tile image-tile is-child">
+              <figure>
+                <img src="Galerie/galerie4.jpg" alt="" class="image-galerie" />
+              </figure>
+            </div>
+            <div class="tile image-tile is-child">
+              <figure>
+                <img src="Galerie/galerie5.jpg" alt="" class="image-galerie" />
+              </figure>
+            </div>
+            <div class="tile image-tile is-child">
+              <figure>
+                <img src="Galerie/galerie6.jpg" alt="" class="image-galerie" />
+              </figure>
+            </div>
+          </div>
+        </div>
+      </section>
 
-							<figure class="tile is-child">
-								<img src="Galerie/galerie2.jpg" class="image-galerie" alt="">
-							</figure>
-							<figure class="tile is-child">
-								<img src="Galerie/galerie3.jpg" class="image-galerie" alt="">
-							</figure>
-				</div>
+      <section class="mlp-section section" id="section4" style="display: none">
+        <canvas
+          class="Board-Canvas absolute-origin in-background"
+          id="canvas2"
+        ></canvas>
+      </section>
+    </section>
+  </body>
 
-				<div class="is-parent">
-						<div class="tile image-tile is-child">
-							<figure>
-								<img src="Galerie/galerie4.jpg" alt="" class="image-galerie">
-							</figure>
-						</div>
-						<div class="tile image-tile is-child">
-							<figure>
-								<img src="Galerie/galerie5.jpg" alt="" class="image-galerie">
-							</figure>
-						</div>
-						<div class="tile image-tile is-child">
-							<figure>
-								<img src="Galerie/galerie6.jpg" alt="" class="image-galerie">
-							</figure>
-						</div>
-				</div>
-			</div>
-	</section>
+  <script src="./Canima/Support/Canvarea.js "></script>
+  <script src="./Canima/Geometry/Figure.js "></script>
+  <script src="./Canima/Geometry/Line.js "></script>
+  <script src="./Canima/Geometry/Curve.js "></script>
+  <script src="./Canima/Medium/Filter.js "></script>
+  <script src="./Canima/Medium/Brushstroke.js "></script>
+  <script src="./Canima/Color/Gradient.js "></script>
+  <script src="./Canima/Geometry/Text.js "></script>
 
-	<section class="mlp-section section" id="section4" style="display: none;">
+  <script src="./Canima/Architecture/Canima.js "></script>
 
-		<canvas class="Board-Canvas absolute-origin in-background" id="canvas2"></canvas>
-</section>
+  <script src="brushStrokesDefs.js "></script>
+  <script src="canvasDisplay.js "></script>
 
-</body>
+  <script>
+    document.addEventListener("DOMContentLoaded", () => {
+      // Get all "navbar-burger" elements
+      const $navbarBurgers = Array.prototype.slice.call(
+        document.querySelectorAll(".navbar-burger"),
+        0
+      );
 
+      // Add a click event on each of them
+      $navbarBurgers.forEach((el) => {
+        el.addEventListener("click", () => {
+          // Get the target from the "data-target" attribute
+          const target = el.dataset.target;
+          const $target = document.getElementById(target);
 
-<script src="./Canima/Support/Canvarea.js "></script>
-	<script src="./Canima/Geometry/Figure.js "></script>
-	<script src="./Canima/Geometry/Line.js "></script>
-	<script src="./Canima/Geometry/Curve.js "></script>
-	<script src="./Canima/Medium/Filter.js "></script>
-	<script src="./Canima/Medium/Brushstroke.js "></script>
-	<script src="./Canima/Color/Gradient.js "></script>
-	<script src="./Canima/Geometry/Text.js "></script>
+          // Toggle the "is-active" class on both the "navbar-burger" and the "navbar-menu"
+          el.classList.toggle("is-active");
+          $target.classList.toggle("is-active");
+        });
+      });
+    });
+  </script>
 
-	<script src="./Canima/Architecture/Canima.js "></script>
+  <script src="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.3/dist/js/bulma-carousel.min.js"></script>
+  <script>
+    // Initialize all div with carousel class
+    const options = {
+      slidesToShow: 1,
+      loop: true,
+    };
+    const carousels = bulmaCarousel.attach(".carousel", options);
 
-	<script src="brushStrokesDefs.js "></script>
-	<script src="canvasDisplay.js "></script>
+    //Loop on each carousel initialized
+    for (var i = 0; i < carousels.length; i++) {
+      //Add Listener event
+      carousels[i].on("before:show", (state) => {
+        console.log(state);
+      });
+    }
 
-<script>
-	document.addEventListener(
-		'DOMContentLoaded',
-		() => {
-			// Get all "navbar-burger" elements
-			const $navbarBurgers =
-				Array.prototype.slice.call(
-					document.querySelectorAll(
-						'.navbar-burger'
-					),
-					0
-				);
+    // Access to bulmaCarousel instance of an element
 
-			// Add a click event on each of them
-			$navbarBurgers.forEach((el) => {
-				el.addEventListener('click', () => {
-					// Get the target from the "data-target" attribute
-					const target = el.dataset.target;
-					const $target =
-						document.getElementById(target);
-
-					// Toggle the "is-active" class on both the "navbar-burger" and the "navbar-menu"
-					el.classList.toggle('is-active');
-					$target.classList.toggle('is-active');
-				});
-			});
-		}
-	);
-</script>
-
-<script src="https://cdn.jsdelivr.net/npm/bulma-carousel@4.0.3/dist/js/bulma-carousel.min.js"></script>
-<script>
-	// Initialize all div with carousel class
-	const options = {
-		slidesToShow: 1,
-		loop: true
-	}
-	const carousels = bulmaCarousel.attach('.carousel', options);
-
-	//Loop on each carousel initialized
-	for (var i = 0; i < carousels.length; i++) {
-		//Add Listener event
-		carousels[i].on('before:show', state => {
-			console.log(state);
-		})
-	}
-
-	// Access to bulmaCarousel instance of an element
-
-	let element = document.querySelector('#my-element');
-	if (element && element.bulmaCarousel) {
-		//bulmaCarousel instance is available as element.bulmaCarousel
-		element.bulmaCarousel.on('before-show', function (state) {
-			console.log(state);
-
-		})
-
-	}
-</script>
-
+    let element = document.querySelector("#my-element");
+    if (element && element.bulmaCarousel) {
+      //bulmaCarousel instance is available as element.bulmaCarousel
+      element.bulmaCarousel.on("before-show", function (state) {
+        console.log(state);
+      });
+    }
+  </script>
 </html>
