--- a/galerie.html
+++ b/galerie.html
@@ -75,7 +75,7 @@
                 Art thérapie
               </a>
 
-              <a href="#section3" class="navbar-item mx-3">
+              <a href="index.html#section3" class="navbar-item mx-3">
                 <span class="icon">
                   <i class="fa-solid fa-envelope"></i>
                 </span>
@@ -90,7 +90,7 @@
           style="display: none"
         ></canvas>
       </div>
-      <section class="container" style="width: 100vh; margin-top: 10vh" :>
+      <section class="container" style="margin-top: 10vh" :>
         <div class="block" style="padding-bottom: 5%">
           <h2 class="is-3 subtitle">La Galerie</h2>
         </div>
