--- a/galerie.html
+++ b/galerie.html
@@ -101,30 +101,30 @@
         <div class="tile is-ancestor">
           <!--Tile Wrapper-->
           <div class="is-parent is-vertical">
-            <figure class="tile image-tile is-child">
+            <figure class="tile image-tile">
               <img src="Galerie/galerie1.jpg" class="image-galerie" alt="" />
             </figure>
 
-            <figure class="tile image-tile is-child">
+            <figure class="tile image-tile">
               <img src="Galerie/galerie2.jpg" class="image-galerie" alt="" />
             </figure>
-            <figure class="tile image-tile is-child">
+            <figure class="tile image-tile">
               <img src="Galerie/galerie3.jpg" class="image-galerie" alt="" />
             </figure>
           </div>
 
           <div class="is-parent">
-            <div class="tile image-tile is-child">
+            <div class="tile image-tile">
               <figure>
                 <img src="Galerie/galerie4.jpg" alt="" class="image-galerie" />
               </figure>
             </div>
-            <div class="tile image-tile is-child">
+            <div class="tile image-tile">
               <figure>
                 <img src="Galerie/galerie5.jpg" alt="" class="image-galerie" />
               </figure>
             </div>
-            <div class="tile image-tile is-child">
+            <div class="tile image-tile">
               <figure>
                 <img src="Galerie/galerie6.jpg" alt="" class="image-galerie" />
               </figure>
