Fix titles positions

--- a/coursStages.html
+++ b/coursStages.html
@@ -162,7 +162,7 @@
         </div>
         <div class="section" style="padding-top: 10vh">
           <div class="block">
-            <h2 class="is-size-3 has-text-justify subtitle">
+            <h2 class="is-size-3 has-text-justify subtitle has-text-centered">
               Tarifs de l'atelier de Saint Gué
             </h2>
           </div>
@@ -249,7 +249,7 @@
     <section class="section">
       <div class="container">
         <div class="block">
-          <h2 class="is-size-3 has-text-justify subtitle">
+          <h2 class="is-size-3 has-text-justify subtitle has-text-centered">
             Groupes colonies et écoles
           </h2>
         </div>
