Add background color for readibilty

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       ></canvas>
     </section>
     <!-- First section -->
-    <section class="mlp-section section">
+    <section class="mlp-section section bg-white">
       <div class="columns">
         <div class="column is-one-third">
           <figure class="image is-4-by-5 p-5 is-hidden-mobile">
