--- a/cours-et-stages.html
+++ b/cours-et-stages.html
@@ -57,14 +57,14 @@
                 Galerie
               </a>
 
-              <a href="./coursStages.html" class="navbar-item mx-3">
+              <a href="./cours-et-stages.html" class="navbar-item mx-3">
                 <span class="icon">
                   <i class="fa-solid fa-person-chalkboard"></i>
                 </span>
                 Les cours et stages de mosaiques</a
               >
 
-              <a href="./art_therapie.html" class="navbar-item mx-3">
+              <a href="./art-therapie.html" class="navbar-item mx-3">
                 <span class="icon">
                   <i class="fa-solid fa-hand-holding-hand"></i>
                 </span>
