--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
                 Galerie
               </a>
 
-              <a href="./coursStages.html" class="navbar-item mx-3">
+              <a href="./cours-et-stages.html" class="navbar-item mx-3">
                 <span class="icon">
                   <i class="fa-solid fa-person-chalkboard"></i>
                 </span>
                 Les cours et stages de mosaiques</a
               >
 
-              <a href="./art_therapie.html" class="navbar-item mx-3">
+              <a href="./art-therapie.html" class="navbar-item mx-3">
                 <span class="icon">
                   <i class="fa-solid fa-hand-holding-hand"></i>
                 </span>
@@ -114,7 +114,7 @@
               Marie-Laure Moulart-Barcelo - artiste-mosaïste et art-thérapeute -
               vous accueille à l’Atelier pour vous initier à sa pratique
               artistique à travers des
-              <a href="coursStages.html"> cours et stages de mosaïque</a>
+              <a href="cours-et-stages.html"> cours et stages de mosaïque</a>
               ponctuels ou réguliers et ouverts à toutes et tous. <br />
             </p>
           </div>
@@ -162,7 +162,7 @@
             <h2 class="is-size-3 has-text-justify subtitle">L'art thérapie</h2>
             <p class="mlp-paragraph">
               Vous pouvez bénéficier à l’Atelier de
-              <a href="art_therapie.html">séances d’art thérapie</a> : un
+              <a href="art-therapie.html">séances d’art thérapie</a> : un
               accompagnement thérapeutique individualisé qui exploite votre
               potentiel artistique pour retrouver sérénité et joie de vivre.
             </p>
