--- a/art_therapie.html
+++ b/art_therapie.html
@@ -27,6 +27,11 @@
       <div class="mt-4 mr-4">
         <nav class="navbar is-transparent">
           <div class="navbar-brand">
+						<div class="mobile-title is-hidden-desktop">
+							<h3 class="subtitle">
+								L'atelier de St Gué
+							</h3>
+						</div>
             <div
               class="navbar-burger"
               data-target="navmenu"
