make nav title small caps

--- a/art-therapie.html
+++ b/art-therapie.html
@@ -28,7 +28,7 @@
         <nav class="navbar is-transparent">
           <div class="navbar-brand">
 						<div class="mobile-title is-hidden-desktop">
-							<h3 class="subtitle">
+							<h3 class="subtitle nav-title">
 								L'atelier de St Gué
 							</h3>
 						</div>
