change order of tarifs

--- a/cours-et-stages.html
+++ b/cours-et-stages.html
@@ -28,11 +28,9 @@
       <div class="mt-4 mr-4">
         <nav class="navbar is-transparent">
           <div class="navbar-brand">
-						<div class="mobile-title is-hidden-desktop">
-							<h3 class="subtitle nav-title">
-								L'atelier de St Gué
-							</h3>
-						</div>
+            <div class="mobile-title is-hidden-desktop">
+              <h3 class="subtitle nav-title">L'atelier de St Gué</h3>
+            </div>
             <div
               class="navbar-burger"
               data-target="navmenu"
@@ -165,83 +163,31 @@
             </div>
           </div>
         </div>
-        <div class="section" style="padding-top: 10vh">
-          <div class="block">
-            <h2 class="is-size-3 has-text-justify subtitle has-text-centered">
-              Tarifs de l'atelier de Saint Gué
-            </h2>
-          </div>
-          <div class="columns is-gapless">
-            <div class="column is-flex my-4">
-              <div class="has-text-centered mx-auto">
-                <table class="table has-text-centered price-table">
-                  <thead>
-                    <tr>
-                      <th>Nombres de séances</th>
-                      <th>Prix en euros ttc</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <td>2</td>
-                      <td>50</td>
-                    </tr>
-                    <tr>
-                      <td>3</td>
-                      <td>70</td>
-                    </tr>
-                    <tr>
-                      <td>4</td>
-                      <td>90</td>
-                    </tr>
-                    <tr>
-                      <td>5</td>
-                      <td>110</td>
-                    </tr>
-                    <tr>
-                      <td>6</td>
-                      <td>130</td>
-                    </tr>
-                    <tr>
-                      <td>7</td>
-                      <td>150</td>
-                    </tr>
-                    <tr>
-                      <td>8</td>
-                      <td>160</td>
-                    </tr>
-                    <tr>
-                      <td>9</td>
-                      <td>170</td>
-                    </tr>
-                    <tr>
-                      <td>10</td>
-                      <td>180</td>
-                    </tr>
-                  </tbody>
-                </table>
-                <!--FIN Table Section prix-->
-              </div>
+
+        <section class="section">
+          <div class="container">
+            <div class="block">
+              <h2 class="is-size-3 has-text-justify subtitle has-text-centered">
+                Groupes colonies et écoles
+              </h2>
             </div>
-            <div class="column is-flex is-8">
-              <div class="block my-auto">
-                <p class="mlp-paragraph">
-                  Une séance dure 2 heures ; deux séances minimum. Tarifs
-                  dégressifs à partir de la 3ème et 7ème séance. Modes de
-                  règlement acceptés : chèques et espèces
-                </p>
-                <p class="mlp-paragraph">
-                  Les tarifs comprennent le prêt de l’outillage, tous les
-                  matériaux (émaux, pâtes de verre, ardoise, miroir, grès) colle
-                  et ciment. Des petits supports en bois, des planches petit
-                  format ainsi que du filet sont à votre disposition. Si vous
-                  souhaitez travaillez une autre dimension ou d’autres
-                  matériaux, vous en aurez la charge.
-                </p>
-              </div>
+
+            <div class="content">
+              <p class="mlp-paragraph">
+                L’Atelier propose d’animer un atelier mosaïque auprès d’enfant
+                en structure scolaire ou de loisirs. De manière ludique, les
+                enfants ont la possibilité de développer de nouvelles
+                compétences plastiques en explorant les formes et les couleurs
+                ainsi que les possibilités d’assemblage. <br />L’activité
+                mosaïque leur permettra de développer à la fois leur créativité
+                et leur concentration dans la réalisation de leur production
+                (qu’elle soit individuelle ou collective). Pour plus d’infos sur
+                la mise en œuvre d’atelier mosaïque n’hésitez pas à me
+                contacter. L’Atelier se déplace aussi à l’extérieur !
+              </p>
             </div>
           </div>
-        </div>
+        </section>
       </section>
 
       <canvas
@@ -250,30 +196,83 @@
         style="display: none"
       ></canvas>
     </section>
-
-    <section class="section">
-      <div class="container">
-        <div class="block">
-          <h2 class="is-size-3 has-text-justify subtitle has-text-centered">
-            Groupes colonies et écoles
-          </h2>
+    <div class="section" style="padding-top: 10vh">
+      <div class="block">
+        <h2 class="is-size-3 has-text-justify subtitle has-text-centered">
+          Tarifs de l'atelier de Saint Gué
+        </h2>
+      </div>
+      <div class="columns is-gapless">
+        <div class="column is-flex my-4">
+          <div class="has-text-centered mx-auto">
+            <table class="table has-text-centered price-table">
+              <thead>
+                <tr>
+                  <th>Nombres de séances</th>
+                  <th>Prix en euros ttc</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>2</td>
+                  <td>50</td>
+                </tr>
+                <tr>
+                  <td>3</td>
+                  <td>70</td>
+                </tr>
+                <tr>
+                  <td>4</td>
+                  <td>90</td>
+                </tr>
+                <tr>
+                  <td>5</td>
+                  <td>110</td>
+                </tr>
+                <tr>
+                  <td>6</td>
+                  <td>130</td>
+                </tr>
+                <tr>
+                  <td>7</td>
+                  <td>150</td>
+                </tr>
+                <tr>
+                  <td>8</td>
+                  <td>160</td>
+                </tr>
+                <tr>
+                  <td>9</td>
+                  <td>170</td>
+                </tr>
+                <tr>
+                  <td>10</td>
+                  <td>180</td>
+                </tr>
+              </tbody>
+            </table>
+            <!--FIN Table Section prix-->
+          </div>
         </div>
-
-        <div class="content">
-          <p class="mlp-paragraph">
-            L’Atelier propose d’animer un atelier mosaïque auprès d’enfant en
-            structure scolaire ou de loisirs. De manière ludique, les enfants
-            ont la possibilité de développer de nouvelles compétences plastiques
-            en explorant les formes et les couleurs ainsi que les possibilités
-            d’assemblage. <br />L’activité mosaïque leur permettra de développer
-            à la fois leur créativité et leur concentration dans la réalisation
-            de leur production (qu’elle soit individuelle ou collective). Pour
-            plus d’infos sur la mise en œuvre d’atelier mosaïque n’hésitez pas à
-            me contacter. L’Atelier se déplace aussi à l’extérieur !
-          </p>
+        <div class="column is-flex is-8">
+          <div class="block my-auto">
+            <p class="mlp-paragraph">
+              Une séance dure 2 heures ; deux séances minimum. Tarifs dégressifs
+              à partir de la 3ème et 7ème séance. Modes de règlement acceptés :
+              chèques et espèces
+            </p>
+            <p class="mlp-paragraph">
+              Les tarifs comprennent le prêt de l’outillage, tous les matériaux
+              (émaux, pâtes de verre, ardoise, miroir, grès) colle et ciment.
+              Des petits supports en bois, des planches petit format ainsi que
+              du filet sont à votre disposition. Si vous souhaitez travaillez
+              une autre dimension ou d’autres matériaux, vous en aurez la
+              charge.
+            </p>
+          </div>
         </div>
       </div>
-    </section>
+    </div>
 
     <section class="mlp-section section" id="section4" style="display: none">
       <canvas
