Add commandes sections in nav

--- a/art-therapie.html
+++ b/art-therapie.html
@@ -27,11 +27,9 @@
       <div class="mt-4 mr-4">
         <nav class="navbar is-transparent">
           <div class="navbar-brand">
-						<div class="mobile-title is-hidden-desktop">
-							<h3 class="subtitle nav-title">
-								L'atelier de St Gué
-							</h3>
-						</div>
+            <div class="mobile-title is-hidden-desktop">
+              <h3 class="subtitle nav-title">L'atelier de St Gué</h3>
+            </div>
             <div
               class="navbar-burger"
               data-target="navmenu"
@@ -54,6 +52,13 @@
                 Accueil
               </a>
 
+              <a href="./commandes.html" class="navbar-item mx-3">
+                <span class="icon">
+                  <i class="fa-solid fa-paintbrush"></i>
+                </span>
+                Commandes
+              </a>
+
               <a href="./galerie.html" class="navbar-item mx-3">
                 <span class="icon">
                   <i class="fa-solid fa-palette"></i>
@@ -65,7 +70,7 @@
                 <span class="icon">
                   <i class="fa-solid fa-person-chalkboard"></i>
                 </span>
-                Les cours et stages de mosaiques</a
+                Cours de mosaïque</a
               >
 
               <a href="./art-therapie.html" class="navbar-item mx-3">
