--- a/galerie.html
+++ b/galerie.html
@@ -28,15 +28,13 @@
   </head>
 
   <body>
-    <section class="section" style="padding: 0;">
+    <section class="section" style="padding: 0">
       <div class="mt-4 mr-4">
         <nav class="navbar is-transparent">
           <div class="navbar-brand">
-						<div class="mobile-title is-hidden-desktop">
-							<h3 class="subtitle nav-title">
-								L'atelier de St Gué
-							</h3>
-						</div>
+            <div class="mobile-title is-hidden-desktop">
+              <h3 class="subtitle nav-title">L'atelier de St Gué</h3>
+            </div>
             <div
               class="navbar-burger"
               data-target="navmenu"
@@ -48,7 +46,6 @@
               <span aria-hidden="true"></span>
             </div>
           </div>
-
           <div id="navmenu" class="navbar-menu">
             <div class="navbar-start"></div>
             <div class="navbar-end">
@@ -57,6 +54,13 @@
                   <i class="fas fa-home"></i>
                 </span>
                 Accueil
+              </a>
+
+              <a href="./commandes.html" class="navbar-item mx-3">
+                <span class="icon">
+                  <i class="fa-solid fa-paintbrush"></i>
+                </span>
+                Commandes
               </a>
 
               <a href="./galerie.html" class="navbar-item mx-3">
@@ -70,7 +74,7 @@
                 <span class="icon">
                   <i class="fa-solid fa-person-chalkboard"></i>
                 </span>
-                Les cours et stages de mosaiques</a
+                Cours de mosaïque</a
               >
 
               <a href="./art-therapie.html" class="navbar-item mx-3">
@@ -92,74 +96,74 @@
         <canvas
           class="Board-Canvas absolute-origin in-background"
           id="canvas1"
-          
         ></canvas>
       </div>
-
     </section>
-		<section class="section" style="margin-top: 5vh;">
-			<div class="container">
-				<div class="block">
-					<h2 class="is-size-3 has-text-justify subtitle">
-						Créations sur commande
-					</h2>
-					<p class="mlp-paragraph">
-						L’atelier vous propose des créations personnelles comme du mobilier, de l’art de la table, des tableaux, des fresques intérieures et extérieures.
-						Toutes vos envies ou projets personnels peuvent être réalisés avec un devis sur mesure. Pour toute information supplémentaire, <a href="index.html#section4">contacter</a>  l’Atelier.
-					</p>
-				</div>
-			</div>
-		</section>
+    <section class="section" style="margin-top: 5vh">
+      <div class="container">
+        <div class="block">
+          <h2 class="is-size-3 has-text-justify subtitle">
+            Créations sur commande
+          </h2>
+          <p class="mlp-paragraph">
+            L’atelier vous propose des créations personnelles comme du mobilier,
+            de l’art de la table, des tableaux, des fresques intérieures et
+            extérieures. Toutes vos envies ou projets personnels peuvent être
+            réalisés avec un devis sur mesure. Pour toute information
+            supplémentaire,
+            <a href="index.html#section4">contacter</a> l’Atelier.
+          </p>
+        </div>
+      </div>
+    </section>
 
-		<section class="section">
-			<div class="container">
-					<h2 class="is-size-3 has-text-justify subtitle">La Galerie</h2>
-			</div>
-		</section>
-		<section
-			class="section container galery-container"
-		>
-			<div class="tile is-ancestor">
-				<!--Tile Wrapper-->
-				<div class="is-parent is-vertical">
-					<figure class="tile image-tile">
-						<img src="Galerie/galerie1.jpg" class="image-galerie" alt="" />
-					</figure>
+    <section class="section">
+      <div class="container">
+        <h2 class="is-size-3 has-text-justify subtitle">La Galerie</h2>
+      </div>
+    </section>
+    <section class="section container galery-container">
+      <div class="tile is-ancestor">
+        <!--Tile Wrapper-->
+        <div class="is-parent is-vertical">
+          <figure class="tile image-tile">
+            <img src="Galerie/galerie1.jpg" class="image-galerie" alt="" />
+          </figure>
 
-					<figure class="tile image-tile">
-						<img src="Galerie/galerie2.jpg" class="image-galerie" alt="" />
-					</figure>
-					<figure class="tile image-tile">
-						<img src="Galerie/galerie3.jpg" class="image-galerie" alt="" />
-					</figure>
-				</div>
+          <figure class="tile image-tile">
+            <img src="Galerie/galerie2.jpg" class="image-galerie" alt="" />
+          </figure>
+          <figure class="tile image-tile">
+            <img src="Galerie/galerie3.jpg" class="image-galerie" alt="" />
+          </figure>
+        </div>
 
-				<div class="is-parent">
-					<div class="tile image-tile">
-						<figure>
-							<img src="Galerie/galerie4.jpg" alt="" class="image-galerie" />
-						</figure>
-					</div>
-					<div class="tile image-tile">
-						<figure>
-							<img src="Galerie/galerie5.jpg" alt="" class="image-galerie" />
-						</figure>
-					</div>
-					<div class="tile image-tile">
-						<figure>
-							<img src="Galerie/galerie6.jpg" alt="" class="image-galerie" />
-						</figure>
-					</div>
-				</div>
-			</div>
-		</section>
+        <div class="is-parent">
+          <div class="tile image-tile">
+            <figure>
+              <img src="Galerie/galerie4.jpg" alt="" class="image-galerie" />
+            </figure>
+          </div>
+          <div class="tile image-tile">
+            <figure>
+              <img src="Galerie/galerie5.jpg" alt="" class="image-galerie" />
+            </figure>
+          </div>
+          <div class="tile image-tile">
+            <figure>
+              <img src="Galerie/galerie6.jpg" alt="" class="image-galerie" />
+            </figure>
+          </div>
+        </div>
+      </div>
+    </section>
 
-		<section class="mlp-section section" id="section4" style="display: none">
-			<canvas
-				class="Board-Canvas absolute-origin in-background"
-				id="canvas2"
-			></canvas>
-		</section>
+    <section class="mlp-section section" id="section4" style="display: none">
+      <canvas
+        class="Board-Canvas absolute-origin in-background"
+        id="canvas2"
+      ></canvas>
+    </section>
   </body>
 
   <script src="./Canima/Support/Canvarea.js "></script>
