--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
                 Accueil
               </a>
 
+              <a href="./commandes.html" class="navbar-item mx-3">
+                <span class="icon">
+                  <i class="fa-solid fa-paintbrush"></i>
+                </span>
+                Commandes
+              </a>
+
               <a href="./galerie.html" class="navbar-item mx-3">
                 <span class="icon">
                   <i class="fa-solid fa-palette"></i>
@@ -61,7 +68,7 @@
                 <span class="icon">
                   <i class="fa-solid fa-person-chalkboard"></i>
                 </span>
-                Les cours et stages de mosaiques</a
+                Cours de mosaïque</a
               >
 
               <a href="./art-therapie.html" class="navbar-item mx-3">
@@ -71,7 +78,7 @@
                 Art thérapie
               </a>
 
-              <a href="#section4" class="navbar-item mx-3">
+              <a href="index.html#section4" class="navbar-item mx-3">
                 <span class="icon">
                   <i class="fa-solid fa-envelope"></i>
                 </span>
