--- a/cours-et-stages.html
+++ b/cours-et-stages.html
@@ -53,6 +53,13 @@
                 Accueil
               </a>
 
+              <a href="./commandes.html" class="navbar-item mx-3">
+                <span class="icon">
+                  <i class="fa-solid fa-paintbrush"></i>
+                </span>
+                Commandes
+              </a>
+
               <a href="./galerie.html" class="navbar-item mx-3">
                 <span class="icon">
                   <i class="fa-solid fa-palette"></i>
@@ -64,7 +71,7 @@
                 <span class="icon">
                   <i class="fa-solid fa-person-chalkboard"></i>
                 </span>
-                Les cours et stages de mosaiques</a
+                Cours de mosaïque</a
               >
 
               <a href="./art-therapie.html" class="navbar-item mx-3">
