--- a/art-therapie.html
+++ b/art-therapie.html
@@ -98,7 +98,7 @@
               <figure class="image mx-auto my-auto">
                 <img
                   style="max-height: 100%; width: 80%; object-fit: cover"
-                  src="./poissons-detail.png"
+                  src="./ArtTherap1.jpg"
                   alt="image-cours-adulte-atelier"
                 />
               </figure>
@@ -125,7 +125,7 @@
               <figure class="image mx-auto my-auto is-hidden-tablet my-5">
                 <img
                   style="max-height: 800px; object-fit: cover"
-                  src="./poissons-detail.png"
+                  src="./ArtTherap1.jpg"
                   alt="image-cours-adulte-atelier"
                 />
               </figure>
