--- a/galerie.html
+++ b/galerie.html
@@ -97,14 +97,14 @@
       </div>
 
     </section>
-		<section class="section" style="margin-top: 5vh;">
+		<section class="section mt-5" >
 			<div class="container">
 				<div class="block">
 					<h2 class="is-size-3 has-text-justify subtitle">
 						Créations sur commande
 					</h2>
-					<p class="mlp-paragraph">
-						L’atelier vous propose des créations personnelles comme du mobilier, de l’art de la table, des tableaux, des fresques intérieures et extérieures.
+					<p class="mlp-paragraph content">
+						L’atelier vous propose des <strong> créations personnelles </strong> comme du mobilier, de l’art de la table, des tableaux, des fresques intérieures et extérieures.
 						Toutes vos envies ou projets personnels peuvent être réalisés avec un devis sur mesure. Pour toute information supplémentaire, <a href="index.html#section4">contacter</a>  l’Atelier.
 					</p>
 				</div>
@@ -112,46 +112,153 @@
 		</section>
 
 		<section class="section">
-			<div class="container">
-					<h2 class="is-size-3 has-text-justify subtitle">La Galerie</h2>
+			<div class="block">
+					<h2 class="is-size-3 has-text-justify subtitle">La Galerie, quelques créations...</h2>
 			</div>
+
+      <div class="container carousel-container">
+        <!-- Start Carousel -->
+				<div id="carousel-demo" class="carousel container">
+					<div class="item-1 ">
+						<!-- Slide Content -->
+            <figure class=" is-centered">
+              <img class ="image-carousel is-centered"  src="Galerie/Tableaux/AlguesPourpres.jpg" alt="Algues pourpres">
+            </figure>
+					</div>
+					<div class="item-2 ">
+						<figure class=" ">
+              <img class="image-carousel is-centered" src="Galerie/Tableaux/AlguesPourpres.jpg" alt="Algues pourpres">
+            </figure>
+					</div>
+					<div class="item-3 ">
+						<figure class=" ">
+              <img class ="image-carousel is-centered" src="Galerie/Tableaux/AlguesPourpres.jpg" alt="Algues pourpres">
+            </figure>
+					</div>
+				</div>
+				<!-- End Carousel -->
+
+      </div>
 		</section>
 		<section
 			class="section container galery-container"
 		>
-			<div class="tile is-ancestor">
-				<!--Tile Wrapper-->
+			<!-- <div class="tile is-ancestor">
+				Tile Wrapper
 				<div class="is-parent is-vertical">
-					<figure class="tile image-tile">
-						<img src="Galerie/galerie1.jpg" class="image-galerie" alt="" />
+					<figure class="tile image-tile js-modal-trigger" data-target="modal-photo1">
+						<img src="Galerie/Mosaique10.jpg" class="image-galerie" alt="" />
 					</figure>
 
-					<figure class="tile image-tile">
-						<img src="Galerie/galerie2.jpg" class="image-galerie" alt="" />
+            <div id="modal-photo1" class="modal">
+              <div class="modal-background"></div>
+              <div class="modal-content">
+                <figure class="image">
+                  <img src="Galerie/Mosaique10.jpg" class="image-galerie" alt="" />
+                </figure>
+              </div>
+            </div>
+
+            <figure class="tile image-tile js-modal-trigger" data-target="modal-photo0">
+              <img src="Galerie/fresque-murale.png" class="image-galerie" alt="" />
+            </figure>
+  
+              <div id="modal-photo0" class="modal">
+                <div class="modal-background"></div>
+                <div class="modal-content">
+                  <figure class="image">
+                    <img src="Galerie/fresque-murale.png" class="image-galerie" alt="" />
+                  </figure>
+                </div>
+              </div>
+
+					<figure class="tile image-tile js-modal-trigger" data-target="modal-photo2">
+						<img src="Galerie/TableMosaique1.jpg" class="image-galerie" alt="" />
 					</figure>
-					<figure class="tile image-tile">
-						<img src="Galerie/galerie3.jpg" class="image-galerie" alt="" />
+
+          <div id="modal-photo2" class="modal">
+            <div class="modal-background"></div>
+            <div class="modal-content container">
+              <figure class="image">
+                <img src="Galerie/TableMosaiqueZoom1.jpg" class="image-galerie" alt="" />
+              </figure>
+              <figure class="image">
+                <img src="Galerie/TableMosaiqueZoom2.jpg" class="image-galerie" alt="" />
+              </figure>
+            </div>
+          </div>
+
+					<figure class="tile image-tile js-modal-trigger" data-target="modal-photo3">
+						<img src="Galerie/Mosaique5.jpg" class="image-galerie" alt="" />
 					</figure>
+
+          <div id="modal-photo3" class="modal">
+              <div class="modal-background"></div>
+              <div class="modal-content">
+                <figure class="image">
+                  <img src="Galerie/Mosaique5.jpg" class="image-galerie" alt="" />
+                </figure>
+              </div>
+            </div>
 				</div>
 
 				<div class="is-parent">
-					<div class="tile image-tile">
-						<figure>
-							<img src="Galerie/galerie4.jpg" alt="" class="image-galerie" />
+
+          <div class="tile image-tile">
+						<figure class="tile image-tile js-modal-trigger" data-target="modal-photo4">
+							<img src="Galerie/Mosaique12.jpg" alt="" class="image-galerie" />
 						</figure>
+            <div id="modal-photo4" class="modal">
+              <div class="modal-background"></div>
+              <div class="modal-content">
+                <figure class="image">
+                  <img src="Galerie/Mosaique12.jpg" class="image-galerie" alt="" />
+                </figure>
+              </div>
+            </div>
+					</div>
+
+					<div class="tile image-tile">
+						<figure class="tile image-tile js-modal-trigger" data-target="modal-photo5">
+							<img src="Galerie/Mosaique11.jpg" alt="" class="image-galerie" />
+						</figure>
+            <div id="modal-photo5" class="modal">
+              <div class="modal-background"></div>
+              <div class="modal-content">
+                <figure class="image">
+                  <img src="Galerie/Mosaique11.jpg" class="image-galerie" alt="" />
+                </figure>
+              </div>
+            </div>
 					</div>
 					<div class="tile image-tile">
-						<figure>
-							<img src="Galerie/galerie5.jpg" alt="" class="image-galerie" />
+						<figure class="tile image-tile js-modal-trigger" data-target="modal-photo6">
+							<img src="Galerie/Mosaique7.jpg" alt="" class="image-galerie" />
 						</figure>
+            <div id="modal-photo6" class="modal">
+              <div class="modal-background"></div>
+              <div class="modal-content">
+                <figure class="image">
+                  <img src="Galerie/Mosaique7.jpg" class="image-galerie" alt="" />
+                </figure>
+              </div>
+            </div>
 					</div>
 					<div class="tile image-tile">
-						<figure>
-							<img src="Galerie/galerie6.jpg" alt="" class="image-galerie" />
+						<figure class="tile image-tile js-modal-trigger" data-target="modal-photo7">
+							<img src="Galerie/Mosaique9.jpg" alt="" class="image-galerie" />
 						</figure>
+            <div id="modal-photo7" class="modal">
+              <div class="modal-background"></div>
+              <div class="modal-content">
+                <figure class="image">
+                  <img src="Galerie/Mosaique9.jpg" class="image-galerie" alt="" />
+                </figure>
+              </div>
+            </div>
 					</div>
 				</div>
-			</div>
+			</div> -->
 		</section>
 
 		<section class="mlp-section section" id="section4" style="display: none">
@@ -175,6 +282,7 @@
 
   <script src="brushStrokesDefs.js "></script>
   <script src="canvasDisplay.js "></script>
+ 
 
   <script>
     document.addEventListener("DOMContentLoaded", () => {
@@ -226,4 +334,6 @@
       });
     }
   </script>
+
+<script src="bulma_modal.js"></script>
 </html>
